# dicom_private

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.xxxgithub/: CONTRIBUTING.md
docs/: conf.py  index.md
src/dicom_private/: __init__.py  compare_priv.py  core.py  make_dcm2nii.py  make_dcm_safe_private.py  make_dcmtk.py  make_dicom3tools.py  make_gdcm.py  make_tcia.py
src/dicom_private/checks/: non_similar.py  vendor_repeats.py
src/dicom_private/dicts/: DICOM_safe.py  dcm2nii.py  dcmtk.py  dicom3tools.py  gdcm.py  tcia.py
src/dicom_private/output/: index.html  unknowns.html
tests/: test_package.py
